Fix article alignment problems

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -83,6 +83,10 @@ aside ul li a {
   height: 100%; }
 
 .github-logo {
+  -webkit-transition: background 0.5s ease-out;
+  -moz-transition: background 0.5s ease-out;
+  -o-transition: background 0.5s ease-out;
+  transition: background 0.5s ease-out;
   background: url("../images/github-logo-white.svg"); }
 
 .github-logo:hover,
@@ -91,6 +95,10 @@ aside ul li a {
   background: url("../images/github-logo-black.svg"); }
 
 .reddit-logo {
+  -webkit-transition: background 0.5s ease-out;
+  -moz-transition: background 0.5s ease-out;
+  -o-transition: background 0.5s ease-out;
+  transition: background 0.5s ease-out;
   background: url("../images/reddit-logo-white.svg"); }
 
 .reddit-logo:hover,
@@ -99,6 +107,10 @@ aside ul li a {
   background: url("../images/reddit-logo-black.svg"); }
 
 .key-logo {
+  -webkit-transition: background 0.5s ease-out;
+  -moz-transition: background 0.5s ease-out;
+  -o-transition: background 0.5s ease-out;
+  transition: background 0.5s ease-out;
   background: url("../images/key-logo-white.svg"); }
 
 .key-logo:hover,
@@ -123,26 +135,50 @@ aside ul li a {
   padding-left: 8rem;
   padding-right: 8rem; }
 
+.header-link {
+  display: block;
+  width: 100%; }
+
 article {
   border: 1px solid #dadada;
   border-radius: 3px;
   background: none repeat scroll 0 0 #ffffff;
   padding: 1.5rem 1.5rem; }
 
-.article-headline {
-  margin-bottom: 2rem; }
-
-.inner-content {
+.article-inner-content {
   padding-top: 0.7rem;
   padding-left: 0.7rem; }
+
+.article-metadata {
+  width: 100%;
+  padding: 1rem; }
+
+.metadata-item:nth-child(2),
+.metadata-item:nth-child(3) {
+  margin-left: 0.8rem; }
+
+.article-headline {
+  margin-bottom: 2rem; }
 
 article footer {
   display: block;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  margin-top: 2rem; }
 
 article footer button {
   float: right; }
+
+.header-link img {
+  -webkit-transition: opacity 0.5s ease-out;
+  -moz-transition: opacity 0.5s ease-out;
+  -o-transition: opacity 0.5s ease-out;
+  transition: opacity 0.5s ease-out;
+  object-fit: cover;
+  min-width: 100%; }
+
+.header-link img:hover {
+  opacity: 0.8; }
 
 @media only screen and (max-width: 991px) {
   aside {
